[gd_scene load_steps=16 format=3 uid="uid://di3boesgwti70"]

[ext_resource type="Script" uid="uid://b01vthb403r83" path="res://merchant.gd" id="1_xvtft"]
[ext_resource type="Shader" uid="uid://bgsdv5cdl7thg" path="res://enemies/enemy.gdshader" id="2_fc5m3"]
[ext_resource type="Texture2D" uid="uid://cg4ksgp6br7ad" path="res://merchants/bedouin.png" id="2_iuoaj"]
[ext_resource type="Shader" uid="uid://cqywsqw100tpd" path="res://enemies/shadow_ball.gdshader" id="4_xrhc7"]
[ext_resource type="FontFile" uid="uid://dphjhfl51n2gn" path="res://resources/Boxy-Bold-Font/Boxy-Bold.ttf" id="5_c46qu"]
[ext_resource type="Texture2D" uid="uid://brrsa8fww32k7" path="res://merchants/carpet.png" id="5_xrhc7"]
[ext_resource type="Shader" uid="uid://5hi61wxt32ay" path="res://merchants/Bobbing.gdshader" id="6_4n2j8"]
[ext_resource type="Texture2D" uid="uid://dfm3d12mu0ajb" path="res://merchants/upgrade1.png" id="7_4n2j8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hypr6"]
shader = ExtResource("2_fc5m3")
shader_parameter/anim_speed = 15.0
shader_parameter/squish_amount = 0.0
shader_parameter/alpha = 1.0
shader_parameter/rand = 0.5
shader_parameter/hue_factor = 1.0
shader_parameter/turn_factor = 0.4
shader_parameter/shadow_angle = 3.14
shader_parameter/offset = Vector2(0, 0)
shader_parameter/has_shadow = false

[sub_resource type="CircleShape2D" id="CircleShape2D_fc5m3"]
radius = 22.0227

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4n2j8"]
resource_local_to_scene = true
shader = ExtResource("4_xrhc7")
shader_parameter/alpha = 1.0

[sub_resource type="Shader" id="Shader_4n2j8"]
code = "shader_type canvas_item;

uniform float rand : hint_range(0.0, 1.0);
uniform bool is_on = false;

void vertex() {
	VERTEX.y += 0.5 * sin(4.0 * TIME + rand);
	if (is_on) {
		VERTEX.y += (21./2.);
		VERTEX *= 1.4;
		VERTEX.y -= (21./2.);
	}
}

//uniform float width = 64;
//uniform float height = 64;
//uniform vec2 mouse_position = vec2(0, 0);
//
//void fragment() {
	//vec2 uv = UV;
//
	//// map skew to [-0.5, 0.5]
	//float skew_x = mouse_position.x / width;
	//float skew_y = mouse_position.y / height;
	//
	//// map to [-0.5, 0.5]
	//uv.x = (uv.x - 0.5);
	//uv.y = (uv.y - 0.5);
	//
	//// ratio - how far are currnet point from mouse position
	//float sx = 1.0 - (uv.x * skew_x);
	//float sy = 1.0 - (uv.y * skew_y);
	//
	//// calculate z (depth) depending on ratio
	//float z = 1.0 + (sx * sy) / 2.0;
	//// correct perspective for given point
	//uv.x = uv.x / z;
	//uv.y = uv.y / z;
	//
	//// scale a bit down a reset mapping from [-0.5, 0.5] to [0, 1]
	//uv.x = uv.x / 0.45 + 0.5;
	//uv.y = uv.y / 0.45 + 0.5;
	//COLOR = texture(TEXTURE, uv);
	//
	//// if uv outside texture - then use transparent color
	//if (uv.x < 0.0 || uv.x > 1.0) {
		//COLOR.a = 0.0;
	//} else if (uv.y < 0.0 || uv.y > 1.0) {
		//COLOR.a = 0.0;
	//} else {
		//// brightness
		//float brightness = 1.0 - mouse_position.y / (height / 2.0) * 0.2;
		//COLOR.rgb = texture(TEXTURE, uv, 1.0).rgb * brightness;
		//
		//COLOR.a = texture(TEXTURE, uv, 1.0).a;
	//}
//}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4agfp"]
shader = SubResource("Shader_4n2j8")
shader_parameter/rand = 0.0
shader_parameter/is_on = false

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4n2j8"]
radius = 7.1
height = 36.95

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c46qu"]
shader = ExtResource("6_4n2j8")
shader_parameter/rand = 0.0
shader_parameter/is_on = false

[node name="MerchantGeneric" type="StaticBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_xvtft")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_hypr6")
scale = Vector2(3, 3)
texture = ExtResource("2_iuoaj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 21.55)
shape = SubResource("CircleShape2D_fc5m3")

[node name="Shadow" type="ColorRect" parent="."]
unique_name_in_owner = true
z_index = -1
material = SubResource("ShaderMaterial_4n2j8")
offset_left = -44.0
offset_top = 21.95
offset_right = 44.0
offset_bottom = 60.95
metadata/_edit_lock_ = true

[node name="Panel1" type="Label" parent="."]
texture_filter = 1
offset_left = -577.148
offset_top = 87.325
offset_right = -167.148
offset_bottom = 167.325
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("5_c46qu")
theme_override_font_sizes/font_size = 16
text = "Dmg +"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Panel2" type="Label" parent="."]
texture_filter = 1
offset_left = 162.695
offset_top = 87.325
offset_right = 572.695
offset_bottom = 167.325
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("5_c46qu")
theme_override_font_sizes/font_size = 16
text = "DMG +
KNOCKBACK +
SPEED -"
vertical_alignment = 1

[node name="carpet" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 160)
scale = Vector2(3, 3)
texture = ExtResource("5_xrhc7")

[node name="AreaLeft" type="Area2D" parent="carpet"]
position = Vector2(-23.5, -1)
collision_layer = 0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="carpet/AreaLeft"]
material = SubResource("ShaderMaterial_4agfp")
texture = ExtResource("7_4n2j8")
offset = Vector2(0, -11.69)

[node name="CollisionShape2D" type="CollisionShape2D" parent="carpet/AreaLeft"]
visible = false
shape = SubResource("CapsuleShape2D_4n2j8")

[node name="StaticBody2D" type="StaticBody2D" parent="carpet/AreaLeft"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="carpet/AreaLeft/StaticBody2D"]
visible = false
shape = SubResource("CapsuleShape2D_4n2j8")

[node name="AreaRight" type="Area2D" parent="carpet"]
position = Vector2(23.5, -1)
collision_layer = 0
metadata/_edit_group_ = true

[node name="Sprite2D3" type="Sprite2D" parent="carpet/AreaRight"]
material = SubResource("ShaderMaterial_c46qu")
texture = ExtResource("7_4n2j8")
offset = Vector2(0, -11)

[node name="CollisionShape2D" type="CollisionShape2D" parent="carpet/AreaRight"]
visible = false
shape = SubResource("CapsuleShape2D_4n2j8")

[node name="StaticBody2D" type="StaticBody2D" parent="carpet/AreaRight"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="carpet/AreaRight/StaticBody2D"]
visible = false
shape = SubResource("CapsuleShape2D_4n2j8")

[node name="MerchantTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="carpet/AreaLeft" to="." method="_on_area_left_area_entered"]
[connection signal="area_entered" from="carpet/AreaRight" to="." method="_on_area_right_area_entered"]
[connection signal="timeout" from="MerchantTimer" to="." method="_on_merchant_timer_timeout"]
